# Hierarchical_Music_Transformer

./: .gitignore  .pre-commit-config.yaml  CASE_STUDIES.md  DATA_FLOW_DETAILED.md  DETAILED_ANALYSIS.md  DOCUMENTATION_INDEX.md  MODEL_CHANGES.md  PROJECT_REPORT.md  README.md  README_CLEAN.md  TECHNICAL_DEEP_DIVE.md  collect.py  collect_data.py  continue_collect_optimized.py  continue_from_midi_checkpoint.py  create_training_data.py  fast_test.py  fix_midi_paths.py  generate.py  howToRun.md  main.py  presentation_01.md  presentation_script.md  process.py  process_batched.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  run.py  run_collect.py  run_generate.py  run_process.py  run_process_batched.py  run_test.py  run_train.py  setup.cfg  test.py  train.py
.github/workflows/: ci.yml  docs.yml
amt/: __init__.py  cli.py  cli_simple.py  config.py
amt/collect/: __init__.py  collector.py  count_midi.py  data_pairing.py  midi_collector.py  text_collector.py
amt/evaluate/: __init__.py  evaluator.py  metrics.py  tester.py
amt/generate/: __init__.py  generator.py
amt/models/: hierarchical_music_transformer.py
amt/process/: __init__.py  continue_from_checkpoint.py  data_preparer.py  midi_processor.py  text_processor.py
amt/train/: __init__.py  create_training_data.py  model.py  trainer.py  training_loop.py
amt/utils/: __init__.py  logging.py
data/output/: automated_paired_data_1000.json  midi_metadata_list.json
docs/: 00_COMPREHENSIVE_PROJECT_REPORT.md  01_DATA_COLLECTION_REPORT.md  02_DATA_PROCESSING_REPORT.md  03_MODEL_TRAINING_REPORT.md  04_MUSIC_GENERATION_REPORT.md  04_method.md  05_EVALUATION_REPORT.md  05_MODEL_DEEP_DIVE.md  06_SYSTEM_ARCHITECTURE_REPORT.md  07_PERFORMANCE_ANALYSIS_REPORT.md  08_PROJECT_SUMMARY_REPORT.md  09_FINAL_PROJECT_OVERVIEW.md  DATA_FLOW_DETAILED.md  FILE_DETAILS.md  FILE_OVERVIEW_AND_DATA_FLOW.md  PROJECT_REPORT.md  README.md  checkpoint_system.md  configuration.md  mkdocs.yml  project_overview.md  requirements.txt  running_guide.md
docs/docs/: index.md
docs/docs/api/: index.md
docs/docs/overview/: architecture.md  index.md  model.md
examples/: paired_data_sample.json
examples/midi/: sample.txt
source/: __init__.py  automate_wikipedia_pairing.py  cluster_text_embeddings.py  collect_text_data_conceptual.py  config.py  extract_midi_metadata.py  extract_text_features.py  fine_tune_amt.py  generate_music.py  prepare_amt_training_data.py  preprocess_midi.py  run_pipeline.py  verify_env.py
source/collect/: __init__.py  data_pairing.py  midi_collector.py  text_collector.py
source/data_collection/: midi_metadata.py  wikipedia_collector.py
source/data_processing/: __init__.py  collect_text.py  midi_processor.py  prepare_training.py  prepare_training_data.py  process_data.py  process_midi.py  process_text.py  text_processor.py
source/evaluation/: __init__.py  metrics.py
source/model/: __init__.py  clustering.py  generation.py  training.py
source/process/: __init__.py  data_preparer.py  midi_processor.py  text_processor.py
source/scripts/: __init__.py  main.py
source/test/: __init__.py  evaluator.py  metrics.py  tester.py
source/train/: __init__.py  generator.py  model.py  trainer.py
source/utils/: __init__.py  data_preparation.py  environment.py
tests/: README.md  conftest.py
tests/integration/: __init__.py  test_fast.py  test_processing_pipeline.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_midi_processor.py  test_settings.py  test_simple.py
(+2 files in other folders)
