[metadata]
name = amt
version = 0.1.0
description = Automated Music Transcription with Transformer models
long_description = file: README.md
long_description_content_type = text/markdown
author = AMT Team
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.20.0
    torch>=1.10.0
    pretty_midi>=0.2.9
    mido>=1.2.10
    tqdm>=4.62.0
    tensorboard>=2.8.0

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black>=23.3.0
    isort>=5.12.0
    ruff>=0.0.262
    mypy>=1.3.0
    pre-commit>=3.3.1
    pytest>=7.3.1
    pytest-cov>=4.1.0 